detect current page content size using quill.getBounds

--- a/create_entry.html
+++ b/create_entry.html
@@ -99,11 +99,9 @@
                 полученный здесь контент абсолютно бесплатно и в любых целях, не запрещённых законодательством. Однако в
                 случае, если сгенерированный здесь текст используется в коммерческом или публичном проекте, ссылка на
                 наш
-                сервис обязательна. Подробнее о правилах использования можно почитать здесь.</p>
+                сервис обязательна. Подробнее о правилах использования можно почитать здесь.
+            </p>
         </div>
-
-
-        <div class="overflow-stopper" tabindex="-1"></div>
     </article>
 
     <svg class="icon-save" viewBox="0 -0.5 25 25" xmlns="http://www.w3.org/2000/svg">
