add div to detect overflow one step earlier

--- a/create_entry.html
+++ b/create_entry.html
@@ -102,13 +102,8 @@
                 сервис обязательна. Подробнее о правилах использования можно почитать здесь.</p>
         </div>
 
-<!--        <div class="new-page">-->
 
-<!--        </div>-->
-
-        <footer>
-            <p>Saving...</p>
-        </footer>
+        <div class="overflow-stopper" tabindex="-1"></div>
     </article>
 
     <svg class="icon-save" viewBox="0 -0.5 25 25" xmlns="http://www.w3.org/2000/svg">
