refactor: move js files to js folder; move editor creation to editor.js file

--- a/new_entry.html
+++ b/new_entry.html
@@ -138,6 +138,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
-<script src="./new_entry.js"></script>
+<script src="./js/editor.js"></script>
+<script src="./js/new_entry.js"></script>
 </body>
 </html>
