--- a/search_entries.html
+++ b/search_entries.html
@@ -8,8 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
           rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.bubble.css" rel="stylesheet">
-
     <link rel="stylesheet" href="./css/styles.css">
     <title>Minimalist Diary</title>
 </head>
@@ -73,7 +71,6 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
-<script src="./search_entries.js"></script>
+<script src="./js/search_entries.js"></script>
 </body>
 </html>
