--- a/entry.html
+++ b/entry.html
@@ -138,6 +138,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
-<script src="./entry.js"></script>
+<script src="./js/editor.js"></script>
+<script src="./js/entry.js"></script>
 </body>
 </html>
