load entries from file to search_entries.html

--- a/entry.html
+++ b/entry.html
@@ -38,7 +38,7 @@
 
             <ul>
                 <li>
-                    <a href="./search_all.html" id="search-all">
+                    <a href="./search_entries.html" id="search-entries">
                         <img src="./img/icon-search.svg" alt="search icon" aria-hidden="true">
                         <span>Search</span>
                     </a>
