allow editing old entry

--- a/new_entry.html
+++ b/new_entry.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./new_entry.html" id="new-entry">
+                    <a href="./new_entry.html">
                         <img src="./img/icon-new-entry.svg" alt="pen icon" aria-hidden="true">
                         <span>New entry</span>
                     </a>
@@ -110,6 +110,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
-<script src="./entry.js"></script>
+<script src="./new_entry.js"></script>
 </body>
 </html>
