add save on doutle-tick button

--- a/new_entry.html
+++ b/new_entry.html
@@ -89,24 +89,68 @@
                 случае, если сгенерированный здесь текст используется в коммерческом или публичном проекте, ссылка на
                 наш
                 сервис обязательна. Подробнее о правилах использования можно почитать здесь.</p>
-            <br>
-            <p>Прародителем текста-рыбы является известный "Lorem Ipsum" — латинский текст, ноги которого растут аж из
-                45
-                года до нашей эры. Сервисов по созданию случайного текста на основе Lorem Ipsum великое множество,
-                однако
-                все они имеют один существенный недостаток: их "рыба текст" подходит лишь для англоязычных
-                ресурсов/проектов. Мы же, фактически, предлагаем Lorem Ipsum на русском языке — вы можете использовать
-                полученный здесь контент абсолютно бесплатно и в любых целях, не запрещённых законодательством. Однако в
-                случае, если сгенерированный здесь текст используется в коммерческом или публичном проекте, ссылка на
-                наш
-                сервис обязательна. Подробнее о правилах использования можно почитать здесь.
-            </p>
         </div>
     </article>
 
-    <svg class="icon-save" hidden viewBox="0 -0.5 25 25" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5.03033 11.4697C4.73744 11.1768 4.26256 11.1768 3.96967 11.4697C3.67678 11.7626 3.67678 12.2374 3.96967 12.5303L5.03033 11.4697ZM8.5 16L7.96967 16.5303C8.26256 16.8232 8.73744 16.8232 9.03033 16.5303L8.5 16ZM17.0303 8.53033C17.3232 8.23744 17.3232 7.76256 17.0303 7.46967C16.7374 7.17678 16.2626 7.17678 15.9697 7.46967L17.0303 8.53033ZM9.03033 11.4697C8.73744 11.1768 8.26256 11.1768 7.96967 11.4697C7.67678 11.7626 7.67678 12.2374 7.96967 12.5303L9.03033 11.4697ZM12.5 16L11.9697 16.5303C12.2626 16.8232 12.7374 16.8232 13.0303 16.5303L12.5 16ZM21.0303 8.53033C21.3232 8.23744 21.3232 7.76256 21.0303 7.46967C20.7374 7.17678 20.2626 7.17678 19.9697 7.46967L21.0303 8.53033ZM3.96967 12.5303L7.96967 16.5303L9.03033 15.4697L5.03033 11.4697L3.96967 12.5303ZM9.03033 16.5303L17.0303 8.53033L15.9697 7.46967L7.96967 15.4697L9.03033 16.5303ZM7.96967 12.5303L11.9697 16.5303L13.0303 15.4697L9.03033 11.4697L7.96967 12.5303ZM13.0303 16.5303L21.0303 8.53033L19.9697 7.46967L11.9697 15.4697L13.0303 16.5303Z"/>
-    </svg>
+    <button class="save-button">
+        <svg class="icon-save" viewBox="0 -0.5 25 25" xmlns="http://www.w3.org/2000/svg">
+            <path class="left-tick" fill="#E07A5F" d="M 5.03033 11.4697
+          C 4.73744 11.1768 4.26256 11.1768 3.96967 11.4697
+          C 3.67678 11.7626 3.67678 12.2374 3.96967 12.5303
+          L 5.03033 11.4697
+          Z
+          M 8.5 16
+          L 7.96967 16.5303
+          C 8.26256 16.8232 8.73744 16.8232 9.03033 16.5303
+          L 8.5 16
+          Z
+          M 17.0303 8.53033
+          C 17.3232 8.23744 17.3232 7.76256 17.0303 7.46967
+          C 16.7374 7.17678 16.2626 7.17678 15.9697 7.46967
+          L 17.0303 8.53033
+          Z
+          M 3.96967 12.5303
+          L 7.96967 16.5303
+          L 9.03033 15.4697
+          L 5.03033 11.4697
+          L 3.96967 12.5303
+          Z
+          M 9.03033 16.5303
+          L 17.0303 8.53033
+          L 15.9697 7.46967
+          L 7.96967 15.4697
+          L 9.03033 16.5303
+          Z"/>
+            <path fill="#E07A5F" d="
+          M 9.03033 11.4697
+          C 8.73744 11.1768 8.26256 11.1768 7.96967 11.4697
+          C 7.67678 11.7626 7.67678 12.2374 7.96967 12.5303
+          L 9.03033 11.4697
+          Z
+          M 12.5 16
+          L 11.9697 16.5303
+          C 12.2626 16.8232 12.7374 16.8232 13.0303 16.5303
+          L 12.5 16
+          Z
+          M 21.0303 8.53033
+          C 21.3232 8.23744 21.3232 7.76256 21.0303 7.46967
+          C 20.7374 7.17678 20.2626 7.17678 19.9697 7.46967
+          L 21.0303 8.53033
+          Z
+          M 7.96967 12.5303
+          L 11.9697 16.5303
+          L 13.0303 15.4697
+          L 9.03033 11.4697
+          L 7.96967 12.5303
+          Z
+          M 13.0303 16.5303
+          L 21.0303 8.53033
+          L 19.9697 7.46967
+          L 11.9697 15.4697
+          L 13.0303 16.5303
+          Z"/>
+        </svg>
+    </button>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
