store entries in local storage

--- a/search_all.html
+++ b/search_all.html
@@ -49,7 +49,7 @@
                         <span>New entry</span>
                     </a>
                 </li>
-                <li>
+                <li hidden>
                     <a href="#">
                         <img src="./img/icon-settings.svg" alt="gear icon" aria-hidden="true">
                         <span>Settings</span>
@@ -102,6 +102,5 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
-<script src="./diary.js"></script>
 </body>
 </html>
