--- a/entry.html
+++ b/entry.html
@@ -38,13 +38,13 @@
 
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="./search_all.html">
                         <img src="./img/icon-search.svg" alt="search icon" aria-hidden="true">
                         <span>Search</span>
                     </a>
                 </li>
                 <li>
-                    <a href="./create_entry.html">
+                    <a href="./entry.html">
                         <img src="./img/icon-new-entry.svg" alt="pen icon" aria-hidden="true">
                         <span>New entry</span>
                     </a>
